<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0"
            android:gravity="top|center_horizontal"
            android:text="Tooltip Builder options" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:columnCount="2"
            android:rowCount="5">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layoutDirection="rtl"
                android:text="Touch Inside" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="0"
                android:checked="true"
                android:text="Touch Outside" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layoutDirection="rtl"
                android:text="Consume" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkbox_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="1"
                android:text="Custom Font" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkbox_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:checked="true"
                android:layoutDirection="rtl"
                android:text="Floating Animation" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkbox_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="2"
                android:checked="true"
                android:text="With Arrow" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkbox_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:checked="true"
                android:layoutDirection="rtl"
                android:text="With Overlay" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/checkbox_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="3"
                android:text="Custom Style" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_marginTop="6dp"
                android:layout_row="4"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:text="Duration: 3000ms" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <it.sephiroth.android.library.numberpicker.NumberPicker
                    android:id="@+id/seekbar_duration"
                    style="@style/NumberPicker.Filled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="3000"
                    app:picker_max="5000"
                    app:picker_min="0"
                    app:picker_orientation="vertical"
                    app:picker_stepSize="50"
                    app:picker_tracker="exponential" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gravity:" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_gravities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/gravities" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_tooltip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:hint="Tooltip Text"
                android:maxLines="2" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_me" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/customViewTooltip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom View Tooltip" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open Dialog" />

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>